--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -32,6 +32,8 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           git add snapshot.json || echo "no snapshot to commit"
-          git diff --quiet && echo "No changes to snapshot" || git commit -m "Update snapshot" && git push
+          git diff --quiet || git commit -m "Update snapshot"
+          git diff --quiet || git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} HEAD:main
+
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
