--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,16 +2,20 @@ name: Bookwhen Scraper
 
 on:
   schedule:
-    - cron: "*/5 * * * *"   # every 10 minutes
+    - cron: "*/5 * * * *"   # every 5 minutes
   workflow_dispatch:          # allows manual run
 
 jobs:
   scraper:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write 
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -29,11 +33,8 @@ jobs:
 
       - name: Commit snapshot if changed
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add snapshot.json || echo "no snapshot to commit"
-          git diff --quiet || git commit -m "Update snapshot"
-          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} HEAD:main
-
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git diff --staged --quiet || git commit -m "Update snapshot"
+          git push
